# elea

./: CHANGELOG.md  README.md  elea.cabal
examples/hello-world/: program.yaml
src/: Elea.hs
src/Elea/: Base.hs  Constant.hs  Constants.hs  Def.hs  Index.hs  Obj.hs  Program.hs  Server.hs  Set.hs
src/Elea/Atom/: Phenomena.hs  Program.hs
src/Elea/Constant/: Computer.hs  Program.hs
src/Elea/Object/: Phenomena.hs  Program.hs
src/Elea/Types/: Causality.hs  Composition.hs  Consensus.hs  Elea.hs  Reality.hs
tests/: Serialization.hs  Util.hs  test.hs
