cabal-version:      2.4
name:               elea
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Jeff Wise
maintainer:         jeff@elea.software

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:    Elea
                        Elea.Constants
                        Elea.Types.Elea

    -- Modules included in this library but not exported.
    -- other-modules:
    build-depends:      base ^>=4.14.3.0,
                        aeson,
                        bytestring,
                        hashable,
                        record-hasfield,
                        text,
                        unordered-containers,
                        yaml

    hs-source-dirs:     src
    default-language:   Haskell2010
    ghc-options:        -F -pgmF=record-dot-preprocessor
    default-extensions: OverloadedStrings

test-suite test
   default-language:    Haskell2010
   type:                exitcode-stdio-1.0
   hs-source-dirs:      tests
   main-is:             test.hs
   build-depends:       base >= 4 && < 5,
                        tasty >= 0.10.0.3,
                        elea

